# opencapture

./: .gitignore  CLAUDE.md  LICENSE  README.md  README_zh.md  analyze.sh  install.sh  pyproject.toml  requirements.txt  requirements_enhanced.txt  run.py  start_with_qwen.sh  test_grouping.py  uninstall.sh
.github/workflows/: release.yml  test.yml
config/: example.yaml
docs/: agent-analysis-pipeline.md  code-review.md  openclaw_context_architecture.md  openclaw_memory_research.md  qwen3vl_integration_design.md  requirements.md  technical_design.md
docs/specs/: architecture.md  data-storage.md  gui.md  keyboard-logging.md  microphone-capture.md  screenshot-capture.md  startup-launch.md  window-tracking.md
packaging/: launch_gui.py  macos.spec  windows.spec
skills/opencapture/: SKILL.md
src/: __init__.py  analyzer.py  auto_capture.py  auto_capture_enhanced.py  config.py  image_analyzer.py  llm_client.py  log_screenshot_analyzer.py  mic_capture.py  qwen_client.py  report_generator.py
src/opencapture/: __init__.py  __main__.py  analyzer.py  app.py  app_tray.py  auto_capture.py  cli.py  config.py  date_resolver.py  engine.py  llm_client.py  mic_capture.py  onboarding.py  report_generator.py  service.py
src/opencapture/config/: example.yaml
src/opencapture/gui/: __init__.py  base.py  generic.py  macos.py
src/opencapture/mic/: __init__.py  _base.py  macos.py
src/opencapture/platform/: __init__.py  _base.py  _fallback.py  _macos.py  _windows.py
tests/: conftest.py  test_analysis_engine.py  test_analyzer.py  test_analyzer_pipeline.py  test_auto_capture.py  test_config.py  test_date_resolver.py  test_engine.py  test_key_logger.py  test_llm_client.py  test_mouse_capture.py  test_report_generator.py
