[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "opencapture"
version = "0.2.0"
description = "macOS/Linux tool that records keyboard and mouse activity, captures screenshots, and uses AI to analyze user behavior"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "OpenCapture Contributors" }]

dependencies = [
    "pynput>=1.7.6",
    "mss>=9.0.1",
    "Pillow>=10.0.0",
    "sounddevice>=0.5.0",
    "pyyaml>=6.0",
    "aiohttp>=3.9.0",
    "pyobjc-framework-Cocoa>=10.0; sys_platform == 'darwin'",
    "pyobjc-framework-Quartz>=10.0; sys_platform == 'darwin'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
include = ["src*"]
