[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opencapture"
version = "0.0.0"
description = "Record keyboard/mouse activity, capture screenshots, and analyze with AI"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "OpenCapture Contributors" }]

dependencies = [
    "pynput>=1.7.6",
    "mss>=9.0.1",
    "Pillow>=10.0.0",
    "sounddevice>=0.5.0",
    "pyyaml>=6.0",
    "aiohttp>=3.9.0",
    "pystray>=0.19.5",
    "pyobjc-framework-Cocoa>=10.0; sys_platform == 'darwin'",
    "pyobjc-framework-Quartz>=10.0; sys_platform == 'darwin'",
]

[project.scripts]
opencapture = "opencapture.cli:main"

[project.gui-scripts]
opencapture-gui = "opencapture.app:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
]

[tool.setuptools]
packages = ["opencapture"]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
opencapture = ["config/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
